# budgie-brightness-control-applet

./: README.md  meson.build
src/: BudgieBrightnessControlApplet.plugin.in  BudgieBrightnessControlApplet.vala  ILogindManager.vala  meson.build
